[package]

name = "netaddr"
version = "0.1.2"
authors = [
    "KokaKiwi <kokakiwi@kokakiwi.net>",
]

description = "Network addresses utilities for Rust."
documentation = "http://kokakiwi.github.io/rust-netaddr/doc/netaddr/index.html"
repository = "https://github.com/KokaKiwi/rust-netaddr"
readme = "README.md"

keywords = ["net"]
license = "MIT"

[dependencies]
rustc-serialize = "*"
log = "*"
